[gd_scene load_steps=2 format=2]

[ext_resource path="res://prefabs/ui/settings/settings.gd" type="Script" id=1]

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_left = 70.0
margin_top = 10.0
margin_right = 313.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButtonOrbitCircles" type="CheckButton" parent="Container/VBoxContainer"]
margin_right = 243.0
margin_bottom = 40.0
text = "Show obits circles"

[node name="CheckButtonPlanetArea" type="CheckButton" parent="Container/VBoxContainer"]
margin_top = 44.0
margin_right = 243.0
margin_bottom = 84.0
text = "Always show planet area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButtonFPS" type="CheckButton" parent="Container/VBoxContainer"]
margin_top = 88.0
margin_right = 243.0
margin_bottom = 128.0
text = "Show frames per seconds"

[node name="CheckButtonDebug" type="CheckButton" parent="Container/VBoxContainer"]
margin_top = 132.0
margin_right = 243.0
margin_bottom = 172.0
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="Container/VBoxContainer"]
margin_top = 176.0
margin_right = 243.0
margin_bottom = 196.0
text = "Back"
[connection signal="toggled" from="Container/VBoxContainer/CheckButtonOrbitCircles" to="." method="_on_show_orbit_circles"]
[connection signal="toggled" from="Container/VBoxContainer/CheckButtonPlanetArea" to="." method="_on_show_planet_area"]
[connection signal="toggled" from="Container/VBoxContainer/CheckButtonDebug" to="." method="_on_is_debug"]
[connection signal="pressed" from="Container/VBoxContainer/ButtonBack" to="." method="_on_back"]
